Car's selector has been changed to attribute

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,4 +1,4 @@
-<app-car></app-car>
-<app-car></app-car>
-<app-car></app-car>
-<app-car></app-car>
+<div app-car></div>
+<div app-car></div>
+<div app-car></div>
+<div app-car></div>
