--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,4 +1,3 @@
-<div app-car></div>
-<div app-car></div>
-<div app-car></div>
+<button [disabled]="!canAddCar" class="btn btn-primary">Add car</button>
+<hr>
 <div app-car></div>
