mirroring inputted text has been implemented

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -2,3 +2,7 @@
 <p>{{addCarStatus}}</p>
 <hr>
 <div app-car></div>
+<hr>
+
+<input type="text" class="form-control" (keyup)="onKeyUp($event)">
+<p>{{inputText}}</p>
