mirroring has been fixed

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -4,5 +4,5 @@
 <div app-car></div>
 <hr>
 
-<input type="text" class="form-control" (keyup)="onKeyUp($event)">
+<input type="text" class="form-control" (input)="onKeyUp($event)">
 <p>{{inputText}}</p>
