2 way binding has been implemented

--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -4,5 +4,6 @@
 <div app-car></div>
 <hr>
 
-<input type="text" class="form-control" #myInp (input)="onKeyUp(myInp.value)">
+
+<input type="text" class="form-control" [(ngModel)]="inputText" >
 <p>{{inputText}}</p>
