--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -6,5 +6,10 @@
     <p>Машина добавлена</p>
 </ng-template>
 <hr>
-<div app-car></div>
-<hr>
+<app-car *ngFor="let car of cars"></app-car>
+
+<ul>
+    <li *ngFor="let item of items; let i = index">
+        <b>{{i + 1}}</b> - <i>{{item.name}}</i>
+    </li>
+</ul>
