--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -6,10 +6,16 @@
     <p>Машина добавлена</p>
 </ng-template>
 <hr>
-<app-car *ngFor="let car of cars"></app-car>
+<!-- <app-car *ngFor="let car of cars"></app-car> -->
 
 <ul>
-    <li *ngFor="let item of items; let i = index">
-        <b>{{i + 1}}</b> - <i>{{item.name}}</i>
+    <li *ngFor="let car of cars; let i = index">
+        <div [ngStyle]="{
+            backgroundColor: (i + 1) % 2 === 0 
+                ? 'red' : 'green',
+            'color':'white'
+        }">
+            <b>{{i+1}}</b> {{car}}
+        </div>
     </li>
 </ul>
