--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,17 +1,7 @@
 <input type="text" class="form-control" [(ngModel)]="carName">
-<hr>
-<button class="btn btn-primary" (click)="addCar()">Add car</button>
-<p *ngIf="!isCarAdded; else successStatus">Машина не добавлена</p>
-<ng-template #successStatus>
-    <p>Машина добавлена</p>
-</ng-template>
-<hr>
-<!-- <app-car *ngFor="let car of cars"></app-car> -->
+<input type="text" class="form-control" [(ngModel)]="carYear">
+<button class="btn btn-primary" (click)="addCar()">Добавить машину</button>
 
-<ul>
-    <li *ngFor="let date of dates; let i = index">
-        <div>
-            <b>{{i+1}}</b> {{date | uppercase}}
-        </div>
-    </li>
-</ul>
+<hr>
+
+<app-car *ngFor="let car of cars" [carItem]="car"></app-car>
