--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,3 +1,5 @@
+<p>Форма добавленя машины</p>
+<hr>
 <app-add-car (onAddCar)="updateCarList($event)"></app-add-car>
 <hr>
 <app-car *ngFor="let car of cars" [carItem]="car"></app-car>
