--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,9 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="col-xs-8 col-xs-offset-2">
+    <h3 appBackground>{{ headerText }}</h3>
+  </div>
+</div>
+
